BUG FIX. When in mobile, the url bar changed the height of the calculated vertical height. When a user scrolls up and down, the url bar hides and appears. This makes the hero grow and shrink, causing a buggy jump while scrolling. There are javascript work arounds, but I just took a CSS approach and applied a set height to the hero when the user gets to portrait mode. Also, added a width to hero-inner, to stop my description from breaking into two lines.

--- a/makemepretty.css
+++ b/makemepretty.css
@@ -409,6 +409,9 @@ audio{
 .sent-fade{
     opacity:0;
 }
+.hero-inner{
+    width:80%;
+}
 
 
 /*perrenial*/
@@ -536,7 +539,7 @@ audio{
     }
 }
 
-/*When input is active on about this keeps everything mobile*/
+/*When input is active on the about page, this keeps everything in mobile format*/
 @media screen and (max-width: 400px){
     .fifty-hundred {
         width:100%;
@@ -687,6 +690,7 @@ audio{
     }
     .hero{
         background-attachment:scroll;
+        height:50em;
     }
     input, input:active, input:focus, textarea, textarea:active, textarea:focus {
         width: 90%;
